# career-booster

./: .env.example  README.md  app.py  details.md  main.py  requirements.txt
backend/: config.py
backend/agents/: agents.py
backend/services/: cerebras_llm.py  parsers.py
backend/utils/: prompt_generator.py
crewai_project/career_booster/: .gitignore  README.md  USAGE.md  platform_prompts.md  pyproject.toml  sample_job.txt  sample_resume.txt  test_career_booster.py
crewai_project/career_booster/src/career_booster/: crew.py  main.py
crewai_project/career_booster/src/career_booster/config/: agents.yaml  tasks.yaml
frontend/: README.md  app.py  requirements.txt
frontend/static/css/: processing.css  results.css  settings.css  style.css  styles.css
frontend/static/js/: main.js  processing.js  results.js  upload.js
frontend/templates/: dashboard.html  index.html  layout.html  processing.html  results.html  settings.html
static/css/: style.css
static/js/: main.js
templates/: index.html  layout.html  processing.html  results.html
venv312/: pyvenv.cfg
