[project]
name = "career_booster"
version = "0.1.0"
description = "career_booster using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
career_booster = "career_booster.main:run"
run_crew = "career_booster.main:run"
train = "career_booster.main:train"
replay = "career_booster.main:replay"
test = "career_booster.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
